# ts_manager

./: .gitignore  .prettierignore  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
league/: admin.py  apps.py  filter.py  forms.py  helper.py  manager.py  models.py  signals.py  tables.py  urls.py  views.py
league/migrations/: 0001_initial.py  0002_alter_team_manager.py  0003_alter_player_user.py  0004_rename_league_type_season_league_season_active_and_more.py  0005_alter_matchday_options_alter_season_options_and_more.py  0006_venue_team_venue.py  0007_alter_match_options_alter_team_options_match_status_and_more.py  0008_rename_match_date_match_date_matchday_date.py  0009_segmentscore_away_players_segmentscore_home_players_and_more.py  0010_alter_segmentscore_away_score_and_more.py  0011_alter_match_options_alter_matchday_date_and_more.py  0012_delete_leaguetable.py  0013_leaguetable.py
league/templates/account/: login_partial.html
league/templates/admin/: generate_matches.html
league/templates/django_tables2/: material_tailwind.html  material_tailwind_htmx.html
league/templates/league/: active_league.html  base.html  home.html  league_table.html  match_day_detail.html  match_day_list.html  match_detail.html  match_list.html  player_detail.html  player_list.html  season_team_detail.html  submit_lineup.html  (+3 more)
league/tests/: test_helper.py  test_signals.py
templates/: base.html
templates/components/: language_switch.html  login_modal.html  nav.html
templates/includes/: footer.html  header.html
theme/static_src/: package-lock.json  package.json  tailwind.config.js
theme/templates/: base.html
ts_manager/: asgi.py  settings.py  urls.py  wsgi.py
(+4 files in other folders)
