[tool.poetry]
name = "ts-manager"
version = "0.1.0"
description = ""
authors = ["donbignose <stamerra17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.2"
django-environ = "^0.11.2"
mysql-connector-python = "^9.1.0"
django-filter = "^24.3"
django-allauth = "^65.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-django = "^4.9.0"
django-stubs = {extras = ["compatible-mypy"], version = "^5.1.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "ts_manager.settings"
