[tool.poetry]
name = "ts-manager"
version = "0.1.0"
description = ""
authors = ["donbignose <stamerra17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.2"
django-environ = "^0.11.2"
django-filter = "^24.3"
django-allauth = "^65.0.2"
pymysql = "^1.1.1"
django-tailwind = {extras = ["reload"], version = "^3.8.0"}
cryptography = "^43.0.3"
django-crispy-forms = "^2.3"
crispy-tailwind = "^1.0.3"
django-tables2 = "^2.7.0"
django-debug-toolbar = "^4.4.6"
fontawesomefree = "^6.6.0"
pytest-mock = "^3.14.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-django = "^4.9.0"
django-stubs = {extras = ["compatible-mypy"], version = "^5.1.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "ts_manager.settings"
